--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,7 @@
   margin: 0;
   font-family: "Work Sans", sans-serif;
 }
-body {
-}
+
 /*----------------------- 
     G3 Architects 
 -------------------------*/
@@ -52,8 +51,8 @@ nav li {
   margin-bottom: 10px;
 }
 .brand-description {
-  width: 868px;
-  height: 52px;
+  /* width: 868px;
+  height: 52px; */
   font-weight: 400;
   font-size: 16px;
   text-align: center;
@@ -237,7 +236,7 @@ nav li {
   align-items: center;
   margin: 0 290px;
 }
-.some:hover{
+.some:hover {
   transform: rotate(30deg);
 }
 .some {
@@ -314,4 +313,94 @@ footer {
   text-align: center;
   color: #424242;
   padding: 39px 410px;
+}
+.hide {
+  display: none;
+}
+@media screen and (max-width: 576px) {
+  nav {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 5px;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  nav li {
+    margin: 10px;
+  }
+  /*------------------------------- 
+    Brand New Group of Architects
+---------------------------------*/
+  .brand {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: 0;
+  }
+  .brand-title {
+    font-size: 30px;
+  }
+  .brand-description {
+    font-size: 8px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .btn-explore {
+    margin: 0 100px 10px 100px;
+  }
+  .banner img {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  }
+  /*------------------------------- 
+    Quick list of Our Features
+---------------------------------*/
+  .list-of-our{
+    margin: auto;
+    display: grid;
+  }
+  .list-image{
+    padding: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  /*------------------------------- 
+    Features you will love & enjoy
+---------------------------------*/
+.skills-container{
+  display: grid;
+  gap: 20px
+;
+}
+.skills-grid{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+  margin-left: 100px;
+  margin-right: 0;
+  margin-bottom: 10px;
+}
+.skill-item, .skill-title, .skill-description{
+  width: 100%;
+}
+
+.div-img img{
+  height: 100%;
+  width: 100%;
+}
+/*------------------------------- 
+                Some section
+---------------------------------*/
+.some-section{
+  margin: 0 auto;
+}
+
+/*------------------------------- 
+                facts section
+---------------------------------*/
+.facts-flex{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
 }
